# YiYi

./: .gitignore  LICENSE  README.md  README_CN.md  README_EN.md  build.sh
app/: dev.sh  (+4 more)
app/src-tauri/: .gitignore  AI_Agents_Ecosystem_Analysis_2026.pptx  AI_Agents_Report_2026.pptx  AI智能体生态系统分析报告_2026.pptx  Cargo.toml  cleanup-stdlib.sh  tauri.conf.json  自我介绍.pptx
app/src-tauri/.cargo/: config.toml
app/src-tauri/agents/bot_coordinator/: AGENT.md
app/src-tauri/agents/coder/: AGENT.md
app/src-tauri/agents/desktop_operator/: AGENT.md
app/src-tauri/agents/explore/: AGENT.md
app/src-tauri/agents/memory_curator/: AGENT.md
app/src-tauri/agents/planner/: AGENT.md
app/src-tauri/capabilities/: claude-code-window.json  default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/playwright-bridge/: chrome-manager.mjs  package-lock.json  package.json  server.js
app/src-tauri/scripts/: bundle_python.ps1  bundle_python.sh  reset.sh
app/src-tauri/skills/algorithmic_art/: SKILL.md
app/src-tauri/skills/app_guide/: SKILL.md
app/src-tauri/skills/auto_continue/: SKILL.md
app/src-tauri/skills/bot_setup/: SKILL.md
app/src-tauri/skills/browser_visible/: SKILL.md
app/src-tauri/skills/canvas_design/: SKILL.md
app/src-tauri/skills/claude_code/: SKILL.md
app/src-tauri/skills/coding_assistant/: SKILL.md
app/src-tauri/skills/cron/: SKILL.md
app/src-tauri/skills/doc_coauthoring/: SKILL.md
app/src-tauri/skills/docx/: SKILL.md
app/src-tauri/skills/feishu/: SKILL.md
app/src-tauri/skills/file_reader/: SKILL.md
app/src-tauri/skills/frontend_design/: SKILL.md
app/src-tauri/skills/himalaya/: SKILL.md
app/src-tauri/skills/mcp_builder/: SKILL.md
app/src-tauri/skills/news/: SKILL.md
app/src-tauri/skills/pdf/: SKILL.md
app/src-tauri/skills/pdf/scripts/: create_pdf.py
app/src-tauri/skills/pptx/: SKILL.md
app/src-tauri/skills/seo/: SKILL.md
app/src-tauri/skills/skill_creator/: SKILL.md
app/src-tauri/skills/task_proposer/: SKILL.md
app/src-tauri/skills/theme_factory/: SKILL.md
app/src-tauri/skills/webapp_testing/: SKILL.md
app/src-tauri/skills/wechat_writer/: SKILL.md
app/src-tauri/skills/xlsx/: SKILL.md
app/src-tauri/src/: lib.rs  tray.rs
app/src-tauri/src-python/: main.py
app/src-tauri/src/commands/: agent.rs  agents.rs  bots.rs  browser.rs  buddy.rs  channels.rs  cli.rs  cronjobs.rs  env.rs  export.rs  extensions.rs  heartbeat.rs  mcp.rs  mod.rs  models.rs  permissions.rs  plugins.rs  pty.rs  shell.rs  skills.rs  system.rs  tasks.rs  unified_users.rs  usage.rs  voice.rs  workers.rs  workspace.rs
app/src-tauri/src/engine/: agent_config.rs  buddy_delegate.rs  canvas.rs  compact.rs  config_validate.rs  config_watcher.rs  db.rs  doc_tools.rs  emitter.rs  git_context.rs  hooks.rs  keystore.rs  lane_events.rs  llm_client.rs  mcp_runtime.rs  mcp_server.rs  meditation.rs  memory.rs  mod.rs  permission_mode.rs  plugins.rs  policy_engine.rs  prompt_cache.rs  provider_fallback.rs  pty_manager.rs  react_agent.rs  recovery.rs  scheduler.rs  skills_hub.rs  task_packet.rs  task_registry.rs  tiered_memory.rs  token_counter.rs  tool_registry_global.rs  tools.rs  usage.rs  worker.rs
app/src-tauri/src/state/: app_state.rs  config.rs  mod.rs  providers.rs
app/src-tauri/src/test_support/: app_state.rs  fake_embedder.rs  fixtures.rs  mock_emitter.rs  mock_llm.rs  mocks.rs  mod.rs  tauri_app.rs  temp_db.rs  temp_workspace.rs
app/src-tauri/tests/: commands_agent_chat.rs  commands_agent_session.rs  commands_agents.rs  commands_apphandle_pilot.rs  commands_bots.rs  commands_buddy.rs  commands_cli.rs  commands_cronjobs.rs  commands_env.rs  commands_export.rs  commands_heartbeat.rs  commands_mcp.rs  commands_mock_llm_pilot.rs  commands_models.rs  commands_plugins.rs  commands_pty.rs  commands_shell.rs  commands_skills.rs  commands_system.rs  commands_tasks.rs  commands_unified_users.rs  commands_usage.rs  commands_voice.rs  commands_workers.rs  commands_workspace.rs  engine_bots_manager.rs  engine_mcp_runtime.rs  engine_mem_meditation.rs  engine_react_agent.rs  engine_scheduler.rs  engine_skills_hub.rs  engine_spawn_result.rs  evals_runner.rs  smoke.rs
app/src-tauri/tests/common/: mod.rs
app/src-tauri/wheels/: requirements.txt
(+381 files in other folders)
