[package]
name = "yiyi"
version = "0.0.1"
description = "A Tauri App"
authors = ["you"]
license = "Apache-2.0"
repository = "https://github.com/vibeinging/YiYi"
edition = "2021"
rust-version = "1.77.2"

[features]
test-support = []

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["tray-icon", "image-png"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
dotenv = "0.15"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
zip = "2"
glob = "0.3"
regex = "1"
scraper = "0.22"
urlencoding = "2"
tokio-cron-scheduler = "0.13"
cron = "0.15"
futures = "0.3"
base64 = "0.22"
axum = "0.8"
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
async-trait = "0.1"
include_dir = "0.7"
calamine = "0.26"
rust_xlsxwriter = "0.82"
docx-rs = "0.4"
quick-xml = "0.37"
pdf-extract = "0.7"
# Python: via system subprocess (no embedded runtime)
tauri-plugin-notification = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
# async_py removed — using system python3 subprocess
libc = "0.2"
rfd = "0.15"
lazy_static = "1.4"
portable-pty = "0.8"
memme-core = { path = "../../../MemMe/crates/memme-core", default-features = false }
memme-embeddings = { path = "../../../MemMe/crates/memme-embeddings", default-features = false, features = ["onnx"] }
memme-llm = { path = "../../../MemMe/crates/memme-llm", default-features = false, features = ["openai"] }
strip-ansi-escapes = "0.2"
cpal = "0.15"
rubato = "0.16"
arboard = "3"
serde_yaml = "0.9"
tauri-plugin-updater = "2.10.0"
tauri-plugin-process = "2.3.1"
tauri-plugin-pty = "0.2.1"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
window-vibrancy = "0.5"
mac-notification-sys = "0.6"
core-graphics = "0.24"

[profile.release]
strip = true
lto = true
opt-level = "s"

[dev-dependencies]
mockall = "0.13"
tempfile = "3"
tokio-test = "0.4"
rstest = "0.23"
serial_test = "3"

[dev-dependencies.tokio]
version = "1"
features = ["full", "test-util"]
